update links and link styles

--- a/index.html
+++ b/index.html
@@ -280,9 +280,8 @@
 							<p>
 								An app built with React and Firebase where you can create your own poll and then
 								share the link with anyone you’d like to take part in the poll. A group project
-								developed with <a href="https://camduffin.com/" target="_blank">Cam</a>,
-								<a href="https://jakeisbaek.com/" target="_blank">Jake</a> and
-								<a href="https://melissalocquiao.com/" target="_blank">Melissa</a>.
+								developed with <a href="https://camduffin.com/" target="_blank">Cam</a>, Jake and
+								Melissa.
 							</p>
 							<div class="buttons">
 								<a href="https://popsipoll-juno.netlify.app/" target="_blank" class="btn"
@@ -454,10 +453,9 @@
 							<h3 class="subtitle">HTML, CSS, JS</h3>
 							<h2 class="title">Boat-Ride Adventures</h2>
 							<p>
-								A multi-page PSD to HTML and SASS conversion project pair-programmed with
-								<a href="https://www.beatriceduncan.com/" target="_blank">Beatrice Duncan</a> during
-								Juno College's Immersive Bootcamp. It features a mobile menu created with
-								JavaScript.
+								A multi-page PSD to HTML and SASS conversion project pair-programmed with Beatrice
+								Duncan during Juno College's Immersive Bootcamp. It features a mobile menu created
+								with JavaScript.
 							</p>
 							<div class="buttons">
 								<a
@@ -656,8 +654,8 @@
 							</ul>
 						</div>
 						<div>
-							<h3 class="title">Editor-in-chief, Marketer, Web Designer (Mar 2009 - May 2021)</h3>
-							<h4>OiCanada / Self-Employed</h4>
+							<h3 class="title">Editor-in-chief, Marketer, Web Designer (Mar 2009 - Present)</h3>
+							<h4><a href="https://oitoronto.com" target="_blank">OiToronto</a> / Self-Employed</h4>
 							<ul>
 								<li>
 									Developed the online magazine from scratch and reached a substantial average of
@@ -685,7 +683,7 @@
 									and culture.
 								</li>
 							</ul>
-							<h3 class="title">Web Designer (Dec 1999 - May 2021)</h3>
+							<h3 class="title">Web Designer (Dec 1999 - Present)</h3>
 							<h4>Freelancer</h4>
 							<ul>
 								<li>
